--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "nuxt": "^3.5.1"
   },
   "dependencies": {
+    "@element-plus/nuxt": "^1.0.5",
     "@nuxt/content": "^2.6.0",
+    "@nuxtjs/device": "^3.1.0",
     "@nuxtjs/markdownit": "^2.0.0",
     "@pinia/nuxt": "^0.4.11",
     "less": "^4.1.3",
